# LearnOpenGL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
01_Getting_started/: CMakeLists.txt
01_Getting_started/assets/: shader.fs  shader.vs
01_Getting_started/src/: main.cpp  shader.hpp
02_Lighting/: CMakeLists.txt
02_Lighting/assets/: basic_lighting.fs  basic_lighting.vs  colors.fs  light_cube.fs  light_cube.vs  lighting_maps.fs  multiple_lights.fs  multiple_lights.vs
02_Lighting/src/: camera.hpp  main.cpp
03_Model_Loading/: CMakeLists.txt
03_Model_Loading/assets/Elysia/: Elysia.pmx
03_Model_Loading/src/: camera.hpp  main.cpp  mesh.hpp  model.hpp
04_Advanced_OpenGL/: CMakeLists.txt
04_Advanced_OpenGL/01_Depth_Testing/: CMakeLists.txt  main.cpp
04_Advanced_OpenGL/02_Stencil_Testing/: CMakeLists.txt  main.cpp  shader.hpp
04_Advanced_OpenGL/assets/: depth_testing.fs  depth_testing.vs  single_color.fs  stencil_testing.fs  stencil_testing.vs
scripts/: build_linux.sh  build_windows.bat  clean_windows.bat
tests/: CMakeLists.txt
